*8627* ensure list item visibility inside main page area

--- a/plugins/themes/default/index.less
+++ b/plugins/themes/default/index.less
@@ -93,6 +93,10 @@ p {
 	color: #fff;
 }
 
+.pkp_structure_main li {
+	list-style: disc inside;
+}
+
 /* @group Grid */
 
 .pkp_controllers_grid a {
